# remarkable-notebooklm

./: .env.example  .gitignore  CLAUDE.md  MILESTONES.md  README.md  compass_artifact_wf-0f999d0c-ffd6-48b1-a1ca-05ffb5fb992e_text_markdown.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: notebook-mappings.md
docs/plans/: 2026-02-23-feat-milestone-1-remarkable-sync-plan.md  2026-02-23-feat-notebook-notebooklm-mapping-plan.md
docs/solutions/build-errors/: pil-image-open-strict-type-annotation.md  rmapi-rmscene-no-deps-install.md
docs/solutions/integration-issues/: notebooklm-path-a-cookies-expire-in-scheduled-deployments.md
docs/solutions/logic-errors/: sync-dedup-document-level.md
docs/solutions/runtime-errors/: concurrent-sync-runs-deadlock-without-filelock.md  first-sync-ocr-rate-limiting-explosion.md  scheduled-pipeline-requires-host-not-device.md
docs/solutions/security-issues/: google-oauth-token-json-incompatible-with-headless-deployments.md
docs/solutions/test-failures/: image-crop-aspect-ratio-baseline-mismatch.md
scripts/: register_device.py  setup_google_auth.py
src/rm_notebooklm/: __init__.py  cli.py  config.py
src/rm_notebooklm/gemini/: __init__.py  grounding.py
src/rm_notebooklm/mapping/: __init__.py  loader.py  models.py  resolver.py
src/rm_notebooklm/notebooklm/: __init__.py  drive.py  enterprise.py  unofficial.py
src/rm_notebooklm/ocr/: __init__.py  base.py  claude.py  gemini.py  openai.py
src/rm_notebooklm/parsing/: __init__.py  extractor.py  preprocessor.py  rm_parser.py
src/rm_notebooklm/pdf/: __init__.py  constants.py  generator.py
src/rm_notebooklm/remarkable/: __init__.py  auth.py  client.py  sync.py
src/rm_notebooklm/state/: __init__.py  db.py
src/rm_notebooklm/utils/: __init__.py  hashing.py  logging.py  retry.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_drive_upload.py  test_notebooklm_api.py  test_remarkable_api.py
tests/unit/: test_auth.py  test_mapping_loader.py  test_mapping_resolver.py  test_ocr_quality.py  test_pdf_generator.py  test_preprocessor.py  test_rm_parser.py  test_state_db.py
